# biology-agent

./: .gitignore  QUICKSTART.md  README.md  install.sh
.claude-plugin/: marketplace.json
biology-microscopy/: .mcp.json
biology-microscopy/.claude-plugin/: plugin.json
biology-microscopy/mcp-server/: core.py  mcp-config.example.json  pyproject.toml  requirements.txt  server.py
biology-microscopy/mcp-server/biology_mcp_server/: __init__.py  server.py
biology-microscopy/scripts/: batch-convert-metadata  microscopy-info  validate-formats
biology-microscopy/skills/analyze-microscopy-file/: SKILL.md
biology-microscopy/skills/extract-metadata-batch/: skill.md
biology-structure/: .mcp.json  README.md
biology-structure/.claude-plugin/: plugin.json
biology-structure/commands/: boltz-status.md  predict-affinity.md  predict-structure.md
biology-structure/mcp-server/: pyproject.toml
biology-structure/mcp-server/biology_structure_server/: __init__.py  local_boltz.py  nvidia_nim.py  server.py  utils.py
biology-structure/skills/analyze-binding/: SKILL.md
biology-structure/skills/predict-structure/: SKILL.md
tests/: test_server.py
