[project]
name = "biology-mcp-server"
version = "1.0.0"
description = "Biology microscopy MCP server for Claude Code - read and analyze microscopy image files"
requires-python = ">=3.10"
license = "MIT"
keywords = ["microscopy", "bioio", "mcp", "claude-code", "ome-tiff", "nd2"]
authors = [
    { name = "Biology Research Community" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "bioio>=3.2.0",
    "bioio-ome-tiff>=1.0.0",
    "bioio-nd2>=1.0.0",
    "fastmcp>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
czi = ["bioio-czi>=1.0.0"]
lif = ["bioio-lif>=1.0.0"]
all = [
    "bioio-czi>=1.0.0",
    "bioio-lif>=1.0.0",
]

[project.scripts]
biology-mcp-server = "biology_mcp_server:main"

[project.urls]
Homepage = "https://github.com/keejkrej/biology-agent"
Repository = "https://github.com/keejkrej/biology-agent"
Issues = "https://github.com/keejkrej/biology-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["biology_mcp_server"]
